fixed columns not showing up on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,7 @@
 .item {
     opacity: 0;
     transform: translateY(30px);
-    transition: opacity 1s, transform 0.5s;
-    transition-delay: 1s;
+    transition: opacity 0.5s ease, transform 1s ease;
 }
 
 .item.visible {
